Fix para a sobreposição de z-index na Toolbar.

--- a/apps/front/src/app/components/layout/layout.component.css
+++ b/apps/front/src/app/components/layout/layout.component.css
@@ -20,3 +20,7 @@ a[mat-list-item].ativo::before {
   background-color: var(--mdc-list-list-item-focus-state-layer-color);
   opacity: var(--mdc-list-list-item-focus-state-layer-opacity);
 }
+
+mat-toolbar.mat-toolbar.mat-primary {
+  z-index: 2;
+}
